--- a/public/index.html
+++ b/public/index.html
@@ -8,65 +8,66 @@
   <link rel="icon" href="<%= BASE_URL %>icon.ico">
   <!-- 使用 CDN 加速的 CSS 文件，配置在 vue.config.js 下 -->
   <% for (var i in htmlWebpackPlugin.options.cdn&&htmlWebpackPlugin.options.cdn.css) { %>
-  <link href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" rel="preload" as="style">
-  <link href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" rel="stylesheet">
-  <% } %>
-  <!-- 使用 CDN 加速的 JS 文件，配置在 vue.config.js 下 -->
-  <% for (var i in htmlWebpackPlugin.options.cdn&&htmlWebpackPlugin.options.cdn.js) { %>
-  <link href="<%= htmlWebpackPlugin.options.cdn.js[i] %>" rel="preload" as="script">
-  <% } %>
-  <title><%= VUE_APP_TITLE %></title>
-  <style>
-    html,
-    body,
-    #app {
-      height: 100%;
-      margin: 0px;
-      padding: 0px;
-      width: 100%;
-    }
+    <link href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" rel="preload" as="style">
+    <link href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" rel="stylesheet">
+    <% } %>
+      <!-- 使用 CDN 加速的 JS 文件，配置在 vue.config.js 下 -->
+      <% for (var i in htmlWebpackPlugin.options.cdn&&htmlWebpackPlugin.options.cdn.js) { %>
+        <link href="<%= htmlWebpackPlugin.options.cdn.js[i] %>" rel="preload" as="script">
+        <% } %>
+          <title>
+            <%= VUE_APP_TITLE %>
+          </title>
+          <style>
+            html,
+            body,
+            #app {
+              height: 100%;
+              margin: 0px;
+              padding: 0px;
+              width: 100%;
+            }
 
-    .d2-home {
-      background-color: #303133;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-    }
+            .d2-home {
+              background-color: #F0F1FA;
+              height: 100%;
+              display: flex;
+              flex-direction: column;
+            }
 
-    .d2-home__main {
-      user-select: none;
-      width: 100%;
-      flex-grow: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
+            .d2-home__main {
+              user-select: none;
+              width: 100%;
+              flex-grow: 1;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              flex-direction: column;
+            }
 
-    .d2-home__footer {
-      width: 100%;
-      flex-grow: 0;
-      text-align: center;
-      padding: 1em 0;
-    }
+            .d2-home__footer {
+              width: 100%;
+              flex-grow: 0;
+              text-align: center;
+              padding: 1em 0;
+            }
 
-    .d2-home__footer>a {
-      font-size: 12px;
-      color: #ABABAB;
-      text-decoration: none;
-    }
+            .d2-home__footer>a {
+              font-size: 12px;
+              color: #ABABAB;
+              text-decoration: none;
+            }
 
-    .d2-home__loading {
-      height: 32px;
-      width: 32px;
-      margin-bottom: 20px;
-    }
-  </style>
-  <script>
-    var _hmt = _hmt || [];
-    var hmid = "bc38887aa5588add05a38704342ad7e8";
-    (function () { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?" + hmid; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s); })();
-  </script>
+            .d2-home__loading {
+              width: 400px;
+              margin-bottom: 20px;
+            }
+          </style>
+          <script>
+            var _hmt = _hmt || [];
+            var hmid = "bc38887aa5588add05a38704342ad7e8";
+            (function () { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?" + hmid; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s); })();
+          </script>
 </head>
 
 <body>
@@ -78,10 +79,10 @@
   <div id="app">
     <div class="d2-home">
       <div class="d2-home__main">
-        <img class="d2-home__loading" src="./image/loading/loading-spin.svg" alt="loading">
+        <img class="d2-home__loading" src="./image/loading/load.gif" alt="loading">
       </div>
       <div class="d2-home__footer">
-        <a href="https://github.com/d2-projects/d2-admin" target="_blank">
+        <a href="https://github.com/wsypower/wsy-admin-template" target="_blank">
           杭州天翼智慧城市科技有限公司
         </a>
       </div>
@@ -89,8 +90,8 @@
   </div>
   <!-- 使用 CDN 加速的 JS 文件，配置在 vue.config.js 下 -->
   <% for (var i in htmlWebpackPlugin.options.cdn&&htmlWebpackPlugin.options.cdn.js) { %>
-  <script src="<%= htmlWebpackPlugin.options.cdn.js[i] %>"></script>
-  <% } %>
+    <script src="<%= htmlWebpackPlugin.options.cdn.js[i] %>"></script>
+    <% } %>
 </body>
 
 </html>
